# Programming-Spring-2023

./: README.md  Some good things...  constructor.cpp  node.cpp  node.h  reader.h
CW/: CMakeLists.txt  display.h  main.cpp
CW/Control/: Controller.cpp  Controller.h
CW/Entities/: Player.cpp  Player.h
CW/Game Core/: Field.cpp  Field.h  cell.cpp  cell.h
CW/files/: Level1.tmx  Level2.tmx  anim_luigi.xml  anim_mario.xml
CW/files/soundtrack/: character_select.flac  level_completed.flac  level_select.flac  lvl_clear.flac
CW/source/Animation/: Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h
CW/source/Attributes/: Attributes.h  CharMenu.cpp  CharMenu.h  HealthBar.cpp  HealthBar.h
CW/source/Entities/: Bullet.cpp  Bullet.h  Coin.cpp  Coin.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Player.cpp  Player.h  Star.cpp  Star.h
CW/source/FileManagement/: AnimationFile.cpp  AnimationFile.h  BGFile.cpp  BGFile.h  File.h  LevelFile.cpp  LevelFile.h  MusicFile.cpp  MusicFile.h  PlayerFile.cpp  PlayerFile.h
CW/source/Game/: Game.cpp  Game.h  Level.cpp  Level.h
Lab1/: constructor.h  interface.cpp  interface.h  list.cpp  list.h  main.cpp  reader.cpp  reader.h
Lab2/: failure.cpp  failure.h  file_input.cpp  file_input.h  file_work.cpp  file_work.h  main.cpp
Lab3/: Interface.cpp  Interface.h  department.cpp  department.h  faculty.cpp  faculty.h  file_read.cpp  file_read.h  group.cpp  group.h  main.cpp  message_box.cpp  message_box.h  predefinitions.h  student.cpp  student.h  university.cpp  university.h  validator.cpp  validator.h
Lab4/: main.cpp  mainwindow.cpp  mainwindow.h
Lab5/: CMakeLists.txt  calendar.cpp  calendar.h  calendar.ui  main.cpp  mainwindow.cpp  mainwindow.h  result.cpp  result.h  result.ui  search.cpp  search.h  search.ui  student.cpp  student.h  subject.cpp  subject.h
Lab6/Client/: CMakeLists.txt  client.cpp  client.h  client.ui
Lab6/Server/: CMakeLists.txt  main.cpp  server.cpp  server.h
